Fixed styling issues and spacing/margin calculations.

--- a/trunk/WebContent/VAADIN/themes/portallayouttheme/styles.css
+++ b/trunk/WebContent/VAADIN/themes/portallayouttheme/styles.css
@@ -4,3 +4,22 @@
 	background-color: #878484;
 }
 
+.v-app .v-portlet-header {
+    border-radius: 5px 5px 0 0;
+    -moz-box-shadow: 5px 5px 5px #ccc;
+    -webkit-box-shadow: 5px 5px 5px #ccc;
+    box-shadow: 5px 5px 5px #ccc;
+}
+
+.v-app .v-portlet-content {
+    background-color: #FEFEFE;
+    -moz-box-shadow: 5px 5px 5px #ccc;
+    -webkit-box-shadow: 5px 5px 5px #ccc;
+    box-shadow: 5px 5px 5px #ccc;
+    border: 1px solid black;
+}
+
+.v-app .v-portallayout-spacing {
+	width: 20px !important;
+}
+		
